<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".button.ButtonSampe0501" >

    <TextView
        android:id="@+id/button_sample0501_text_view"
        android:text="@string/button_sample0501_init_message"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center" />

    <Button
        android:id="@+id/button_sample0501_button1"
        android:text="@string/button_sample0501_button1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/button_sample0501_button2"
        android:text="@string/button_sample0501_button2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/button_sample0501_button3"
        android:text="@string/button_sample0501_button3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/button_sample0501_button4"
        android:text="@string/button_sample0501_button4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/button_sample0501_button5"
        android:text="@string/button_sample0501_button5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="btn5Click" />

</LinearLayout>