<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#def"
    tools:context=".app.ActivitySampe0301">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_sample0000_main_text"
        android:textSize="30sp"
        android:background="#88f"
        android:layout_margin="30dp"
        android:gravity="center"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text"
            android:gravity="center"
            android:inputType="text"
            android:textSize="30sp"
            android:hint="@string/activity_sample0301_hint"
            android:autofillHints="@string/activity_sample0301_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:text="@string/register_button"
            android:textSize="30sp"
            android:layout_margin="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/a_add_button"
            android:text="@string/activity_sample0301_texta_add"
            android:textSize="30sp"
            android:layout_margin="20dp" />

    </LinearLayout>


</LinearLayout>