<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select.DatePickerSampe0101">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datepicker_sample0101_textview"
        android:gravity="center"
        android:text="@string/datepicker_sample0101_init_text"
        android:textColor="#000"
        android:textSize="30sp"
        android:layout_margin="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialogA"
        android:text="@string/datepicker_sample0101_buttonA"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialogB"
        android:text="@string/datepicker_sample0101_buttonB"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" />

</LinearLayout>