<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fea"
    tools:context=".datastorage.ExternalStorageSample0101">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/externalstorage_sample0101_text_view"
        android:textSize="24sp"
        android:text="@string/externalstorage_sample0101_init_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/externalstorage_sample0101_image_view"
        android:scaleType="fitCenter"
        android:contentDescription="@string/description_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/externalstorage_sample0101_button_save"
        android:text="@string/externalstorage_sample0101_save_button_text"
        app:layout_constraintTop_toBottomOf="@+id/externalstorage_sample0101_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/externalstorage_sample0101_button_read"
        android:text="@string/visible"
        app:layout_constraintTop_toBottomOf="@+id/externalstorage_sample0101_button_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/externalstorage_sample0101_button_delete"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/externalstorage_sample0101_button_delete"
        android:text="@string/delete"
        app:layout_constraintTop_toBottomOf="@+id/externalstorage_sample0101_button_save"
        app:layout_constraintStart_toEndOf="@+id/externalstorage_sample0101_button_read"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>