<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#8af"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog_sample0201_question"
        android:textSize="20sp"
        android:textColor="#00f"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:id="@+id/alertdialog_sample0201_alertdialog_image1"
            android:src="@drawable/moon1"
            android:contentDescription="@string/alertdialog_sample0201_moon" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:id="@+id/alertdialog_sample0201_alertdialog_image2"
            android:src="@drawable/moon6"
            android:contentDescription="@string/alertdialog_sample0201_tibimoon" />
    </LinearLayout>



</LinearLayout>